force-app/main/default/objects/Customer_Portfolio__c/Customer_Portfolio__c.object-meta.xml
<CustomObject>
    <label>Customer Portfolio</label>
    <nameField>
        <displayFormat>CustomerPortfolio-{00000}</displayFormat>
        <label>Customer Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>